--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jwt-simple": "^0.5.33",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.2.19",
+    "@types/multer": "^1.3.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -28,7 +29,8 @@
     "jwt-simple": "^0.5.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
-    "mongoose-pagination": "^1.0.0"
+    "mongoose-pagination": "^1.0.0",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
