login behaviour added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.2.19",
     "@types/multer": "^1.3.7",
+    "bcrypt": "^3.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
