--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/multer": "^1.3.7",
     "bcrypt": "^3.0.3",
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "jwt-simple": "^0.5.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
