--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jwt-simple": "^0.5.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
